# edumper

./: .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  README.md
client/includes/: headers.hpp  interface.hpp  tcp_socket.hpp
client/source/: main.cpp
driver/: CMakeLists.txt  README.md
driver/includes/: headers.hpp  interface.hpp  utilities.hpp
driver/includes/exports/: ntapi.hpp  peb.hpp  rtl.hpp
driver/source/: main.cpp
usermode/: CMakeLists.txt
usermode/source/: main.cpp
